# gpu_argmax

./: .gitignore  README.md  all_in_one.py  argmax_operation.py  benchmark_argmax.py  benders.py  benders_config.json  benders_runner.py  benders_solver.py  cep_100scen_results.h5  driver.py  generate_docstrings.py  master.py  parallel_second_stage_worker.py  pyproject.toml  regularized_benders.py  run.py  run_saa.ps1  run_saa.sh  second_stage_worker.py  smps_reader.py  test.py  test_argmax.py  test_new_workflow.py  test_parallel_second_stage_worker.py  test_second_stage_worker.py
benchmarks/: Makefile  argmax.c
configs/: 20_config.json  20_config.yaml  baa99-20_config.json  baa99-20_config.yaml  cep_config.json  cep_config.yaml  example_config.yaml  ssn_config.json  ssn_config.yaml  ssn_small_config.json  ssn_small_config.yaml  storm_config.json  storm_config.yaml
docs/: SAA_results_output_format.md  argmax_operation.md  incumbent_benders_solver.md  lru.md  optimality_checking.md  smps_reader.md  testing_optimality_checking.md
reference_implementation/: argmax.c
scripts/: benchmark_argmax.py  build_saa.py  run_benders_solver.py  run_comprehensive_benchmark.py  run_incumbent_benders_solver.py  run_scaling_benchmark.sh
src/: argmax_operation.py  benders.py  config_loader.py  control_variate_validator.py  master.py  memory_monitor.py  parallel_second_stage_worker.py  regularized_benders.py  second_stage_worker.py  smps_reader.py  validator.py
tests/: test_argmax.py  test_control_variate_validator.py  test_lru.py  test_optimality_check.py  test_reader.py  (+2 more)
(+5 files in other folders)
