[project]
name = "gpu_argmax"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "gurobipy",
    "scipy",
    "h5py",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.3.0",
]
cu126 = [
  "torch>=2.3.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true